tests/valid/trait/method_call_short_ufcs_local_mutable_inferred_pure_receiver_bool.facet
trait Runner {
  fn run(self: Self) -> unrestricted bool;
}

impl Runner for unrestricted bool {
  fn run(self: Self) -> unrestricted bool {
    self
  }
}

fn main() -> unrestricted bool {
  let mut x = true;
  (Runner::run x)
}
