tests/invalid/enum/payload_type_mismatch.facet
enum NeedsBool {
  Wrap(unrestricted bool)
}

fn bad() -> unrestricted NeedsBool {
  NeedsBool::Wrap(1)
}
